--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "file-loader": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -19,12 +20,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-react": "^7.25.2",
     "babel-eslint": "^10.1.0",
     "babel-preset-react-app": "^10.0.0",
     "enzyme": "^3.11.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-react": "^7.25.2",
     "gh-pages": "^3.0.0",
     "jest-each": "^27.2.0"
   },
